_sass/main.scss
@charset "UTF-8";

@import 'cobalt';

@import 'text';
@import 'layout';
@import 'header-footer';
@import 'page';
@import 'grid';
@import 'highlight';
// @import 'debug';

// VSP Settings
@font-face {
  font-family: 'Outfit';
  src: url('/assets/fonts/Outfit-Variable.ttf') format('truetype');
  // font-weight: normal; /* or bold, or a number */
  // font-style: normal; /* or italic */
}
// @import url('/assets/fonts/Outfit-Variable.ttf');

b,
strong {
  font-weight: 500; // correct font weight in Chrome, Edge, Safari
}

i,em {
  font-style: oblique 12deg;
}

.filter-button {
  padding: 0.25rem 1rem;
}

.filter-button:hover {
  cursor: pointer;
  background-color: rgb(224, 229, 238);
}

a.filter-link:link {
  text-decoration: none;
}
a.filter-link:hover {
  text-decoration: none;
}
a.filter-link:active {
  text-decoration: none;
}

.filter-button.active {
  background-color: rgb(107, 145, 209);
  color: white;
}

// publications
.section-year {
  background-image: linear-gradient(-5deg, #80bece, #525a9c);
  padding: 0.5rem 0.5rem;
  font-weight: bold;
  font-size: 24px;
  color: white;
}

.paper-row {
  font-size: 14px;
  display: flex;
  flex-direction: row;
  gap: 15px;
  margin-bottom: 4px;
  line-height: 18px;
  padding: 8px 10px 12px 10px;
}

.paper-row:nth-child(odd) {
  background-color: #efeff4;
}


.paper-authors {
  color: #767842;
}

.paper-title {
  font-weight: 500;
}

.tag-selector {
  padding: 1rem;
}

.flex1 {flex:1}

.filter-panel {
  margin-top: 2px;
  padding: 8px;
  border: 2px solid #8bbbff;
  border-radius: 5px;
  display: grid;
  width: 100%;
  gap: 4px;
  grid-template-columns: repeat(3, 1fr)
}

.filter-option {
  padding: 2px 4px;
  background-color: #efefef;
  font-size: 14px;
  line-height: 18px;
  cursor: pointer;
}

.filter-option:hover {
 background-color: #cfe3ff;
}

h2 {
  margin: 2rem 0 1rem 0 !important;
}

@media only screen and (max-width: 640px) {
  .page.wrapper {
    padding: 0.5rem !important;
  }

  .filter-panel {
    font-size: 13px;
    grid-template-columns: repeat(2, 1fr)
  }
}

.edit-pubs-link {
  float: right;
  margin-bottom: 0 !important;

  a {
    color: #b9cce6;
    text-decoration: none !important;
    font-size: 14px;
  }
}

.is-tag-active {
  background-color: #6273e6;
  color: white;
}

.is-tag-active:hover {
  background-color: #929de7;
}

.search-row {
  gap: 0 1rem;
  display: flex;
  flex-direction: row;
}

input.search-box {
  margin: 0 0 !important;
}

// ----------------------------------------------------------------
// from https://www.joshwcomeau.com/css/backdrop-filter/
header {
  position: sticky;
  top: 0;
  // Very opaque, for unsupported browsers. Overwritten in the feature queries below.
  background: #d8d8ecf4; // hsl(0deg, 0%, 100%, 0.95);
  z-index: 2;
}

// This code gets applied for browsers that support backdrop-filter.
@supports
  (backdrop-filter: blur(16px)) or
  (-webkit-backdrop-filter: blur(16px))
{
  header {
    background: #c8c8e470; // hsl(0deg, 0%, 0%, 0.5);
  }

  .frosty-backdrop {
    position: absolute;
    inset: 0;
    // These prefixed properties are usually added automatically by tooling:
    -webkit-backdrop-filter: blur(16px);
    backdrop-filter: blur(16px);
    background: linear-gradient(
      to bottom,
      #d8d8e4,
      transparent 50%
    );
    pointer-events: none;
    // #d8d8e4
  }
}
  // This code gets applied for browsers that support mask-image.
  // This adds the "consider near elements" optimization discussed in this article.
@supports
  (mask-image: none) or
  (-webkit-mask-image: none)
{
  .frosty-backdrop {
    height: 200%;
    -webkit-mask-image: linear-gradient(
      to bottom,
      black 0% 50%,
      transparent 50% 100%
    );
    mask-image: linear-gradient(
      to bottom,
      black 0% 50%,
      transparent 50% 100%
    );
  }
}
// ----------------------------------------------------------------


// ---------------------------------------
// NEW VSP 2025 Website
// ---------------------------------------
body {
  max-width: unset;
  background-color: #eeeef4;

}

h1,h2,h3,h4,h5,h6 {
  font-weight: 500;
}


.text {
  font-weight: 300;
}

.site-title {
  font-weight: 300;
}

.wrapper {
  max-width: unset;
}

.page.wrapper {
  max-width: 68rem;
}

.text img {
  border-radius: 10px;
}

.header-container {
  position: relative;
  height: 5.25rem;
  z-index: 5;
}

.site-header {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;

  display: flex;
  flex-direction: row;
  padding: 0.5rem 2rem 0rem 2rem;
  gap: 1rem;
}

.site-header-logo {
  margin-left: -8px !important;
  padding-top: 0.75rem;
}

.site-header-links {
  margin: 0 auto !important;
}

.site-header-lang {
  border: none !important;
  font-weight: 300;
}

.site-nav {
  border: none !important;
  font-weight: 300;
}

.lang-switcher {
  border: none !important;
}

footer {
  background-color: #eeeef4;
}

.frontpage {
  display: flex;
  flex-direction: row;
  gap: 4rem;
}

.frontpage-content {
  flex: 1;
}

.frontpage-sidebar {
  width: 14rem;
  font-size: 0.9rem;
  line-height: 1.15rem;
  margin-top: 2rem;
}

.site-footer {
  // margin-top: 2rem;
}

.header-logo-image {
  filter: hue-rotate(0deg) saturate(90%); // brightness(135%);
}

.banner img {
  filter: sepia(15%) hue-rotate(201deg) brightness(98%);
}

@include media(max-width 60rem) {
  .header-container {
    height: 6.5rem;
  }
  .navigation {
    margin-top: 0;

    nav {
      padding: 0 !important;
    }
    li {
      margin-right: 0.75rem !important;
    }
  }
  .site-header {
    padding: 0rem 0.5rem 0 1rem;
    flex-direction: column;
    gap: 0;
  }
  .site-nav {
    padding: 0 !important;
    margin: 0;
  }
  .site-header-links {
    margin: 0 !important;
    margin-top: 0.25rem !important;
  }
  .lang-switcher {
    margin-top: none !important;
  }
  .site-header-lang {
    position: absolute;
    top: 0.5rem;
    right: 0;
    border: none !important;
    font-weight: 300;
    font-size: 0.8rem;
  }
  .frontpage {
    flex-direction: column;
  }
  .frontpage-sidebar {
    width: unset;
  }
}

